# Project1

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  End_Of_FileAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  Interpreter.cpp  Interpreter.h  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  ParserHelper.cpp  ParserHelper.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Q_MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Relation.cpp  (+17 more)
Project2TestCases/: inTest.txt
Project3TestCases/: in33.txt  inTest.txt
TestCases/: out61.txt  test1.txt
